import grpc
from concurrent import futures
import tor_pb2
import tor_pb2_grpc

class RelayServicer(tor_pb2_grpc.RelayServicer):
    def ProcessMessage(self, request, context):
        # Implement decryption, forwarding, and circuit building 
        # and onion routing logic
        return tor_pb2.ProcessMessageResponse(encrypted_message=...)

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    tor_pb2_grpc.add_RelayServicer_to_server(RelayServicer(), server)
    server.add_insecure_port("localhost:50052")  # Use a different port for each relay node
    server.start()
    server.wait_for_termination()

if __name__ == "__main__":
    serve()
